--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang = 'en'>
 	<head>	
 		<meta charset="utf-8">
 		<!-- <base href="/"> -->
 		<title>ShabloneSite</title>
 		<meta name="description" content="Simple Starter Description">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<link rel="icon" href="favicon.png">
 		<meta property="og:image" content="images/preview.jpg">
